--- a/Let Me Help/Model/Main.storyboard
+++ b/Let Me Help/Model/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BS9-PQ-dhP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BS9-PQ-dhP">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
@@ -220,7 +220,7 @@
                                     <constraint firstAttribute="height" constant="21" id="Gd4-wn-Lsp"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pTk-p6-dcf">
@@ -312,6 +312,64 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pt2-wa-vyW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5054" y="-90"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="Bml-QK-EB3">
+            <objects>
+                <viewController storyboardIdentifier="webViewController" id="NYm-K8-zPe" customClass="WebViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Obf-ro-jR1"/>
+                        <viewControllerLayoutGuide type="bottom" id="Fmb-rX-ib0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="27R-2M-U9j">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mFR-dz-Vdp">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOR-os-Upo">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <color key="backgroundColor" red="0.055195456660000003" green="0.50548070789999999" blue="0.090875914919999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Ie2-Mu-6ZT"/>
+                                    <barButtonItem title="Done" id="sQp-fQ-cHb">
+                                        <color key="tintColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="doneButtonPressed:" destination="NYm-K8-zPe" id="JI4-3Q-OTf"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                                <color key="barTintColor" red="0.055195456660000003" green="0.50548070789999999" blue="0.090875914919999995" alpha="1" colorSpace="calibratedRGB"/>
+                            </toolbar>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="FIE-eA-SJD">
+                                <rect key="frame" x="282" y="313" width="37" height="37"/>
+                                <color key="color" red="0.22551094350000001" green="0.74607382020000002" blue="0.077101596489999993" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="FIE-eA-SJD" firstAttribute="centerX" secondItem="mFR-dz-Vdp" secondAttribute="centerX" constant="0.5" id="BPH-TK-irb"/>
+                            <constraint firstItem="mFR-dz-Vdp" firstAttribute="leading" secondItem="27R-2M-U9j" secondAttribute="leading" id="EZr-6q-kMT"/>
+                            <constraint firstAttribute="trailing" secondItem="mFR-dz-Vdp" secondAttribute="trailing" id="RRi-Aw-0mI"/>
+                            <constraint firstItem="Fmb-rX-ib0" firstAttribute="top" secondItem="mFR-dz-Vdp" secondAttribute="bottom" id="hlx-lT-xs4"/>
+                            <constraint firstItem="mFR-dz-Vdp" firstAttribute="top" secondItem="SOR-os-Upo" secondAttribute="bottom" id="m73-My-RDY"/>
+                            <constraint firstAttribute="trailing" secondItem="SOR-os-Upo" secondAttribute="trailing" id="pWc-ga-74n"/>
+                            <constraint firstItem="SOR-os-Upo" firstAttribute="top" secondItem="Obf-ro-jR1" secondAttribute="bottom" id="t9E-I7-1Nf"/>
+                            <constraint firstItem="mFR-dz-Vdp" firstAttribute="top" secondItem="SOR-os-Upo" secondAttribute="bottom" id="tIu-Ow-WjF"/>
+                            <constraint firstItem="SOR-os-Upo" firstAttribute="leading" secondItem="27R-2M-U9j" secondAttribute="leading" id="u82-cP-8aK"/>
+                            <constraint firstItem="FIE-eA-SJD" firstAttribute="centerY" secondItem="mFR-dz-Vdp" secondAttribute="centerY" constant="-0.5" id="yDb-sx-j3h"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="customActivityIndicator" destination="FIE-eA-SJD" id="yDW-Lq-Ned"/>
+                        <outlet property="customWebView" destination="mFR-dz-Vdp" id="Z4e-PR-9ir"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jEL-ff-L50" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5054" y="590"/>
         </scene>
         <!--Pop Over Maps View Controller-->
         <scene sceneID="aq3-7E-RNJ">
