--- a/Let Me Help/Model/Main.storyboard
+++ b/Let Me Help/Model/Main.storyboard
@@ -332,8 +332,12 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOR-os-Upo">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Ie2-Mu-6ZT"/>
-                                    <barButtonItem title="Done" id="sQp-fQ-cHb">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="T9L-W2-kX0"/>
+                                    <barButtonItem id="fFN-9N-mTg">
+                                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="9wZ-f3-NLB"/>
+                                    <barButtonItem image="delete.png" id="sQp-fQ-cHb">
                                         <color key="tintColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <action selector="doneButtonPressed:" destination="NYm-K8-zPe" id="JI4-3Q-OTf"/>
@@ -346,10 +350,10 @@
                                 <items>
                                     <barButtonItem style="plain" id="SLd-of-yeR">
                                         <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="B47-rc-8Pv">
-                                            <rect key="frame" x="20" y="7" width="46" height="30"/>
+                                            <rect key="frame" x="20" y="6" width="32" height="32"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                            <state key="normal" title="&lt;">
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <state key="normal" image="backward.png">
                                                 <color key="titleColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <connections>
@@ -363,10 +367,10 @@
                                     <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="5tS-uw-rSj"/>
                                     <barButtonItem style="plain" id="Yuz-Vu-jvP">
                                         <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="E9o-30-Xfh">
-                                            <rect key="frame" x="118" y="7" width="46" height="30"/>
+                                            <rect key="frame" x="104" y="6" width="32" height="32"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                            <state key="normal" title="&gt;">
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <state key="normal" image="forward.png">
                                                 <color key="titleColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <connections>
@@ -398,6 +402,7 @@
                     </view>
                     <connections>
                         <outlet property="customWebView" destination="mFR-dz-Vdp" id="Z4e-PR-9ir"/>
+                        <outlet property="domainLabel" destination="fFN-9N-mTg" id="kgx-yZ-K3t"/>
                         <outlet property="goBackButton" destination="B47-rc-8Pv" id="nwi-U5-0wx"/>
                         <outlet property="goForwardButton" destination="E9o-30-Xfh" id="Zm7-RF-v9G"/>
                     </connections>
@@ -552,4 +557,9 @@
             <point key="canvasLocation" x="6772" y="-104"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="backward.png" width="32" height="32"/>
+        <image name="delete.png" width="32" height="32"/>
+        <image name="forward.png" width="32" height="32"/>
+    </resources>
 </document>
